--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.15.3
   firebase_core: ^2.24.2
   bloc: ^8.1.2
+  flutter_bloc: ^8.1.3
 
 dev_dependencies:
   flutter_test:
