--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.24.2
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
