--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   provider: ^6.1.1
+  google_sign_in: ^6.1.6
 
 dev_dependencies:
   flutter_test:
@@ -66,8 +67,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      
+     - lib/assets/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
